tests/ui/rfcs/rfc-2093-infer-outlives/explicit-projection.stderr
error: rustc_dump_inferred_outlives
  --> $DIR/explicit-projection.rs:8:1
   |
LL | struct Foo<'a, A, B> where A: Trait<'a, B>
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = note: B: 'a

error: aborting due to 1 previous error

